miniml-syntax/src/snapshots/miniml_syntax__parser__tests__add.snap
---
source: miniml-syntax/src/parser.rs
expression: fmt
---
Expr @ 0..5
  Infix @ 0..5
    Expr @ 0..1
      Lit @ 0..1
        Int @ 0..1
          1
    Add @ 2..3
    Expr @ 4..5
      Lit @ 4..5
        Int @ 4..5
          2
