miniml-syntax/src/snapshots/miniml_syntax__parser__tests__binary.snap
---
source: miniml-syntax/src/parser.rs
expression: fmt
---
Expr @ 0..7
  Lit @ 0..7
    Int @ 0..7
      21
