miniml-syntax/src/snapshots/miniml_syntax__parser__tests__complex.snap
---
source: miniml-syntax/src/parser.rs
expression: expr
---
Spanned {
    value: Lit(
        Spanned {
            value: Complex(
                Complex {
                    re: 0.0,
                    im: 123.456,
                },
            ),
            span: Span {
                start: 0,
                end: 8,
            },
        },
    ),
    span: Span {
        start: 0,
        end: 8,
    },
}
