miniml-syntax/src/snapshots/miniml_syntax__parser__tests__fn_add.snap
---
source: miniml-syntax/src/parser.rs
expression: fmt
---
Root @ 0..18
  Decl @ 0..18
    Fn @ 0..18
      Ident @ 3..6
        "add"
      Ident @ 7..8
        "x"
      Ident @ 9..10
        "y"
      Expr @ 13..18
        Infix @ 13..18
          Expr @ 13..14
            Ident @ 13..14
              "x"
          Add @ 15..16
          Expr @ 17..18
            Ident @ 17..18
              "y"
