miniml-syntax/src/snapshots/miniml_syntax__parser__tests__if.snap
---
source: miniml-syntax/src/parser.rs
expression: expr
---
Spanned {
    value: If {
        cond: Spanned {
            value: Ident(
                Spanned {
                    value: InternedString(x),
                    span: Span {
                        start: 3,
                        end: 4,
                    },
                },
            ),
            span: Span {
                start: 3,
                end: 4,
            },
        },
        then: Spanned {
            value: Ident(
                Spanned {
                    value: InternedString(y),
                    span: Span {
                        start: 10,
                        end: 11,
                    },
                },
            ),
            span: Span {
                start: 10,
                end: 11,
            },
        },
        elifs: [],
        else_: Spanned {
            value: Ident(
                Spanned {
                    value: InternedString(z),
                    span: Span {
                        start: 17,
                        end: 18,
                    },
                },
            ),
            span: Span {
                start: 17,
                end: 18,
            },
        },
    },
    span: Span {
        start: 0,
        end: 18,
    },
}
