miniml-syntax/src/snapshots/miniml_syntax__parser__tests__infix.snap
---
source: miniml-syntax/src/parser.rs
expression: expr
---
Spanned {
    value: Infix {
        op: Spanned {
            value: Add,
            span: Span {
                start: 2,
                end: 3,
            },
        },
        lhs: Spanned {
            value: Lit(
                Spanned {
                    value: Int(
                        Int(
                            1,
                        ),
                    ),
                    span: Span {
                        start: 0,
                        end: 1,
                    },
                },
            ),
            span: Span {
                start: 0,
                end: 1,
            },
        },
        rhs: Spanned {
            value: Infix {
                op: Spanned {
                    value: Sub,
                    span: Span {
                        start: 18,
                        end: 19,
                    },
                },
                lhs: Spanned {
                    value: Infix {
                        op: Spanned {
                            value: Mul,
                            span: Span {
                                start: 6,
                                end: 7,
                            },
                        },
                        lhs: Spanned {
                            value: Lit(
                                Spanned {
                                    value: Int(
                                        Int(
                                            2,
                                        ),
                                    ),
                                    span: Span {
                                        start: 4,
                                        end: 5,
                                    },
                                },
                            ),
                            span: Span {
                                start: 4,
                                end: 5,
                            },
                        },
                        rhs: Spanned {
                            value: Infix {
                                op: Spanned {
                                    value: Div,
                                    span: Span {
                                        start: 10,
                                        end: 11,
                                    },
                                },
                                lhs: Spanned {
                                    value: Lit(
                                        Spanned {
                                            value: Int(
                                                Int(
                                                    3,
                                                ),
                                            ),
                                            span: Span {
                                                start: 8,
                                                end: 9,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 8,
                                        end: 9,
                                    },
                                },
                                rhs: Spanned {
                                    value: Infix {
                                        op: Spanned {
                                            value: Pow,
                                            span: Span {
                                                start: 13,
                                                end: 14,
                                            },
                                        },
                                        lhs: Spanned {
                                            value: Lit(
                                                Spanned {
                                                    value: Int(
                                                        Int(
                                                            4,
                                                        ),
                                                    ),
                                                    span: Span {
                                                        start: 12,
                                                        end: 13,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 12,
                                                end: 13,
                                            },
                                        },
                                        rhs: Spanned {
                                            value: Lit(
                                                Spanned {
                                                    value: Rational(
                                                        Ratio {
                                                            numer: 1,
                                                            denom: 2,
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 14,
                                                        end: 17,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 14,
                                                end: 17,
                                            },
                                        },
                                    },
                                    span: Span {
                                        start: 12,
                                        end: 19,
                                    },
                                },
                            },
                            span: Span {
                                start: 8,
                                end: 19,
                            },
                        },
                    },
                    span: Span {
                        start: 4,
                        end: 19,
                    },
                },
                rhs: Spanned {
                    value: Lit(
                        Spanned {
                            value: Real(
                                2.5,
                            ),
                            span: Span {
                                start: 20,
                                end: 23,
                            },
                        },
                    ),
                    span: Span {
                        start: 20,
                        end: 23,
                    },
                },
            },
            span: Span {
                start: 4,
                end: 23,
            },
        },
    },
    span: Span {
        start: 0,
        end: 23,
    },
}
