miniml-syntax/src/snapshots/miniml_syntax__parser__tests__int.snap
---
source: miniml-syntax/src/parser.rs
expression: expr
---
Spanned {
    value: Lit(
        Spanned {
            value: Int(
                Int(
                    123,
                ),
            ),
            span: Span {
                start: 0,
                end: 3,
            },
        },
    ),
    span: Span {
        start: 0,
        end: 3,
    },
}
