miniml-syntax/src/snapshots/miniml_syntax__parser__tests__lambda.snap
---
source: miniml-syntax/src/parser.rs
expression: expr
---
Spanned {
    value: Lambda {
        params: [
            Spanned {
                value: InternedString(x),
                span: Span {
                    start: 1,
                    end: 2,
                },
            },
            Spanned {
                value: InternedString(y),
                span: Span {
                    start: 3,
                    end: 4,
                },
            },
        ],
        body: Spanned {
            value: Infix {
                op: Spanned {
                    value: Add,
                    span: Span {
                        start: 10,
                        end: 11,
                    },
                },
                lhs: Spanned {
                    value: Ident(
                        Spanned {
                            value: InternedString(x),
                            span: Span {
                                start: 8,
                                end: 9,
                            },
                        },
                    ),
                    span: Span {
                        start: 8,
                        end: 9,
                    },
                },
                rhs: Spanned {
                    value: Ident(
                        Spanned {
                            value: InternedString(y),
                            span: Span {
                                start: 12,
                                end: 13,
                            },
                        },
                    ),
                    span: Span {
                        start: 12,
                        end: 13,
                    },
                },
            },
            span: Span {
                start: 8,
                end: 13,
            },
        },
    },
    span: Span {
        start: 0,
        end: 4,
    },
}
